const-tests/translation_contains_escape.stderr
error[E0080]: evaluation of constant value failed
 --> const-tests/translation_contains_escape.rs:3:28
  |
3 |   const _ESC: Escape<8, 4> = Escape::const_new(
  |  ____________________________^
4 | |     '\\',
5 | |     ['\\', '[', ']', '"', '\0', '\n', '\r', '\t'],
6 | |     [('\n', "n\\"), ('\r', "r"), ('\0', "0"), ('\t', "t")],
7 | |     None,
8 | | );
  | |_^ evaluation panicked: assertion failed: !str_contains(&tr[i].1, escape_char as u8)
  |
note: inside `escaping::Escape::<'_, 8, 4>::const_new`
 --> src/lib.rs
  |
  |             assert!(!str_contains(&tr[i].1, escape_char as u8));
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
